[tool.poetry]
name = "gina_scripts"
version = "0.1.0"
description = ""
authors = ["Nishi311 <michaelnishida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
